--- a/impressum.html
+++ b/impressum.html
@@ -27,15 +27,15 @@
             <div class="topic">Angaben gem&auml;&szlig; &sect; 5 TMG</div>
             <p>Diese Seite ist eine Gruppenarbeit im Zuge der Weiterbildung zum Frontendentwickler bei der
                 Developerakademie München.</p>
-            <p>Thomas Mahler und Julia Georgiew<br />
-                Musterstra&szlig;e 111<br />
-                Geb&auml;ude 44<br />
-                90210 Musterstadt</p>
+            <p> Julia Georgiew<br />
+                Ickinger Str. 16<br />
+                82335 Berg<br />
+                </p>
 
             <span class="topic">Kontakt</span>
             <p>Telefon: +49 (0) 8178 909925<br />
-                Telefax: +49 (0) 123 44 55 99<br />
-                E-Mail: mustermann@musterfirma.de</p>
+                
+                E-Mail: java2011@me.com</p>
 
             <p>Quelle: <a
                     href="https://www.e-recht24.de/impressum-generator.html">https://www.e-recht24.de/impressum-generator.html</a>
