--- a/success_mail.html
+++ b/success_mail.html
@@ -16,7 +16,7 @@
 <body onload="animatePaperplane()">
 
     <div class="message-send-container">
-        <img id=paperplane-mail" src="assets/img/mail_send.png" alt="">
+        <img id="paperplane-mail" src="assets/img/mail_send.png" alt="">
         <img id="checkmark-mail" src="assets/img/mail_send_checkmark.png" alt="">
         <span>An E-Mail has been sent to you</span>
     </div>
