--- a/add_task.html
+++ b/add_task.html
@@ -8,8 +8,10 @@
     <script src="./mini_backend.js"></script>
     <script src="js/add_task_templates.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/contact.js"></script>
     <script src="js/add_task.js"></script>
     <script src="js/board.js"></script>
+
     <script src="js/board_templates.js"></script>
 
 
