--- a/add_task.html
+++ b/add_task.html
@@ -36,7 +36,7 @@
 
     <div class="main">
         <div class="whiteBg">
-            <div onclick="addTask('todo')" class="mobileCreate" id="mobileCreate">Create</div>
+            <div onclick="addTask('todo')" class="mobileCreate" id="mobileCreate">Create <img src="assets/img/akar-icons_check.svg" ></div>
         </div>
         <div class="kanban-header-headline d-none" id="headline">
             Kanban Projekt Management Tool
