--- a/contact.html
+++ b/contact.html
@@ -1,83 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Join &vert; Contacts</title>
-    <link rel="stylesheet" href="assets/fonts/fonts.css">
-    <link rel="stylesheet" href="styles/contact.css">
-    <link rel="stylesheet" href="styles/sidebar.css">
-    <link rel="stylesheet" href="styles/header.css">
-    <link rel="stylesheet" href="styles/contact_addtask.css">
-    <link rel="stylesheet" href="styles/colors.css">
-    <link rel="stylesheet" href="styles/board.css">
-    <link rel="stylesheet" href="styles/add_task.css">
+    <link rel="stylesheet" href="assets/fonts/fonts.css" />
+    <link rel="stylesheet" href="styles/contact.css" />
+    <link rel="stylesheet" href="styles/sidebar.css" />
+    <link rel="stylesheet" href="styles/header.css" />
+    <link rel="stylesheet" href="styles/contact_addtask.css" />
+    <link rel="stylesheet" href="styles/colors.css" />
+    <link rel="stylesheet" href="styles/board.css" />
+    <link rel="stylesheet" href="styles/add_task.css" />
+
     <script src="js/contact.js"></script>
     <script src="js/script.js"></script>
     <script src="js/board_render.js"></script>
     <script src="js/board.js"></script>
 
-       <script src="js/board_templates.js"></script>
+    <script src="js/board_templates.js"></script>
     <script src="js/contact_templates.js"></script>
     <!-- <script src="js/contact_addtask.js"></script> -->
     <script src="js/add_task.js"></script>
     <script src="js/add_task_templates.js"></script>
     <!-- <script src="js/contact_addtask_templates.js"></script> -->
     <script src="mini_backend.js"></script>
-    <link rel="icon" href="assets/img/Capa_icon.png">
-</head>
+    <link rel="icon" href="assets/img/Capa_icon.png" />
+  </head>
 
-
-<body onload="renderContactsatStart(), includeHTML('Contacts')">
-   
+  <body onload="renderContactsatStart(), includeHTML('Contacts')">
     <div w3-include-html="templates/sidebar.html"></div>
     <div w3-include-html="templates/header.html"></div>
     <div class="test"></div>
 
-   
-
-    <div class="container" id="container-content">
-    </div>
-    <div class="makeBgDarker d-none" id="makeBgDarker" onclick="closeItQuick()"></div>
-    <div class="overlayTask d-none" id="overlayTask"></div>
+    <div class="container" id="container-content"></div>
+    <!-- <div class="makeBgDarker d-none" id="makeBgDarker" onclick="closeItQuick()"></div>
+    <div class="overlayTask d-none" id="overlayTask"></div> -->
     <div class="main2" id="main-contact">
-        
-        <div class="new-contact-overlay-box d-none" id="overlay-box">
-            <div class="new-contact-overlay" id="new-contact-overlay">
-                <div class="new-contact-left" id="new-contact-left">
-                </div>
-                <div class="new-contact-right" id="new-contact-right-content">  
-                </div>
+      <div class="new-contact-overlay-box d-none" id="overlay-box">
+        <div class="new-contact-overlay" id="new-contact-overlay">
+          <div class="new-contact-left" id="new-contact-left"></div>
+          <div class="new-contact-right" id="new-contact-right-content"></div>
+        </div>
+      </div>
+      <div class="add-new-contact-button" onclick="addNewContact()">
+        <span>New contact</span>
+        <img src="assets/img/contactnew.png" alt="" />
+      </div>
+      <div class="contact-container">
+        <div class="contact-list-box" id="contact-list-content"></div>
+        <div class="contact-main-box" id="contact-main-box">
+          <div class="contact-main-content" id="show-contact-content">
+            <div class="contact-headline-box">
+              <span class="kanban-text">Kanban Projekt Management Tool</span>
+              <span class="contact-headline">Contacts</span>
+              <div class="vertical-and-better">
+                <div class="contact-vertical"></div>
+                <span class="contact-better-with">Better with a team</span>
+              </div>
             </div>
+          </div>
         </div>
-        <div class="add-new-contact-button" onclick="addNewContact()">
-            <span>New contact</span>
-            <img src="assets/img/contactnew.png" alt="">
-        </div>
-        <div class="contact-container">
-            <div class="contact-list-box" id="contact-list-content">
-            </div>
-            <div class="contact-main-box" id="contact-main-box">
-                <div class="newTask d-none" id="newTask"></div>
-                <div class="contact-main-content" id="show-contact-content">
-                    <div class="contact-headline-box">
-                        <span class="kanban-text">Kanban Projekt Management Tool</span>
-                        <span class="contact-headline">Contacts</span>
-                        <div class="vertical-and-better">
-                            <div class="contact-vertical"></div>
-                            <span class="contact-better-with">Better with a team</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="create-new-message" id="create-success-message">
-            <span id="message-text-contacts">Contact successfully created</span>
-        </div>
-        <div id="infoText" class="d-none"><span>Task added to board</span><img src="assets/img/board_icon.svg"></div>
+      </div>
+      <div class="create-new-message" id="create-success-message">
+        <span id="message-text-contacts">Contact successfully created</span>
+      </div>
+      <div id="infoText" class="d-none">
+        <span>Task added to board</span><img src="assets/img/board_icon.svg" />
+      </div>
+      <div
+        class="makeBgDarker d-none"
+        id="makeBgDarker"
+        onclick="closeItQuick()"
+      ></div>
+      <div class="overlayTask d-none" id="overlayTask"></div>
+      <div class="newTask d-none" id="newTask"></div>
     </div>
-</body>
-
+  </body>
 </html>
