--- a/impressum.html
+++ b/impressum.html
@@ -23,7 +23,7 @@
     <div class="main">
         <div class="impressum">
             <h1>Impressum</h1>
-<a href="../summary.html"><div class="stepToSummary">&#8592;</div></a>
+<a href="../joinsingle/summary.html"><div class="stepToSummary">&#8592;</div></a>
             <div class="topic">Angaben gem&auml;&szlig; &sect; 5 TMG</div>
             <p>Diese Seite ist eine Gruppenarbeit im Zuge der Weiterbildung zum Frontendentwickler bei der
                 Developerakademie München.</p>
