--- a/help.html
+++ b/help.html
@@ -21,7 +21,7 @@
     <div class="main">
 <div class="impressum">
         <h1>Help</h1>
-        <a href="../summary.html"><div class="stepToSummary">&#8592;</div></a>
+        <a href="../joinsingle/summary.html"><div class="stepToSummary">&#8592;</div></a>
 
         <div class="topic">What is Join?</div>
         <p>In principle, pending tasks can be managed and processed more easily with Join. It is possible to assign employees to specific tasks. It is particularly helpful to divide extensive tasks into subtasks and thus make the progress visible to everyone.</p>
