--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles/index.css">
     <script src="js/script.js"></script>
     <script src="js/index.js"></script>
-
+    <script src="js/index_templates.js"></script>
 </head>
 
 <body onload="fillLoginForm()">
